--- a/CasseBrique/CasseBrique.vcxproj
+++ b/CasseBrique/CasseBrique.vcxproj
@@ -132,9 +132,11 @@
   <ItemGroup>
     <ClCompile Include="CasseBrique.cpp" />
     <ClCompile Include="GameObject.cpp" />
+    <ClCompile Include="InputManager.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="GameObject.h" />
+    <ClInclude Include="InputManager.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
