added color and HP

--- a/CasseBrique/CasseBrique.vcxproj.filters
+++ b/CasseBrique/CasseBrique.vcxproj.filters
@@ -57,4 +57,9 @@
       <Filter>Fichiers d%27en-tête</Filter>
     </ClInclude>
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="level2.txt">
+      <Filter>Fichiers sources</Filter>
+    </Text>
+  </ItemGroup>
 </Project>
