--- a/CasseBrique/CasseBrique.vcxproj
+++ b/CasseBrique/CasseBrique.vcxproj
@@ -146,6 +146,9 @@
     <ClInclude Include="InputManager.h" />
     <ClInclude Include="Math.h" />
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="level2.txt" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
