blocks respond to collision + bestscore in gitignore

--- a/CasseBrique/CasseBrique.vcxproj
+++ b/CasseBrique/CasseBrique.vcxproj
@@ -147,6 +147,7 @@
     <ClInclude Include="Math.h" />
   </ItemGroup>
   <ItemGroup>
+    <Text Include="combo.txt" />
     <Text Include="level2.txt" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
